Wed Jun 15 00:01:18 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/enc/test_case_comprehensive.rb
	  (TestComprehensiveCaseFold::read_data): use \A and \z instead of
	  ^ and $ in regexp.

Tue Jun 14 23:43:00 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/backward.h (rb_cFixnum, rb_cBignum): remove the
	  backward compatibility macros, to fail incompatible extension
	  libraries early.  [Bug #12427]

Tue Jun 14 22:22:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (rb_strftime_with_timespec): limit the result string
	  size by the format length, to get rid of unlimited memory use.

Tue Jun 14 22:11:11 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_ocsp.c (ossl_ocspcid_get_issuer_name_hash,
	  ossl_ocspcid_get_issuer_key_hash, ossl_ocspcid_get_hash_algorithm):
	  Add accessor methods OCSP::CertificateId#issuer_name_hash,
	  #issuer_key_hash, #hash_algorithm.
	  Based on a patch provided by Paul Kehrer <paul.l.kehrer@gmail.com>.
	  [ruby-core:48062] [Feature #7181]

	* test/openssl/test_ocsp.rb: Test these new methods.

Tue Jun 14 22:07:25 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_strftime.c (date_strftime_with_tmx): reject too
	  large precision to get rid of buffer overflow.
	  reported by Guido Vranken <guido AT guidovranken.nl>.

Tue Jun 14 21:40:42 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_ocsp.c (ossl_ocspbres_to_der, ossl_ocspcid_to_der):
	  Implement #to_der methods for OCSP::BasicResponse and
	  OCSP::CertificateId.

	  (ossl_ocspreq_initialize, ossl_ocspres_initialize): Use GetOCSP*()
	  instead of raw DATA_PTR().

	  (ossl_ocspbres_initialize, ossl_ocspcid_initialize): Allow
	  initializing from DER string.

	  (Init_ossl_ocsp): Define new #to_der methods.

	* test/openssl/test_ocsp.rb: Test these changes. Also add missing tests
	  for OCSP::{Response,Request}#to_der.

Tue Jun 14 21:35:00 2016  Kazuki Yamaguchi  <k@rhe.jp>
